# ChangeLog for dev-libs/dbh
# Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/dbh/Attic/ChangeLog,v 1.17 2004/09/18 15:34:07 tgall Exp $

  18 Sep 2004; Tom Gall <tgall@gentoo.org> dbh-1.0.19.ebuild:
  stable on ppc64, bug #57744

*dbh-1.0.19 (12 Jul 2004)

  12 Jul 2004; Brad Cowan <bcowan@gentoo.org> +dbh-1.0.19.ebuild:
  Version bump for bug #56788.

  23 Jun 2004; <malc@gentoo.org> dbh-1.0.18.ebuild:
  Mark stable on amd64

  19 May 2004; Guy Martin <gmsoft@gentoo.org> dbh-1.0.18.ebuild:
  Marked stable on hppa.

  03 May 2004; Gustavo Zacarias <gustavoz@gentoo.org> dbh-1.0.18.ebuild:
  Stable on sparc

  02 May 2004; Brad Cowan <bcowan@gentoo.org> dbh-1.0.18.ebuild:
  Mark stable on x86.

  26 Apr 2004; Aron Griffis <agriffis@gentoo.org> dbh-1.0.18.ebuild:
  Stable on alpha and ia64

*dbh-1.0.18 (18 Apr 2004)

  18 Apr 2004; Brad Cowan <bcowan@gentoo.org> dbh-1.0.18.ebuild:
  Version bump.

  10 Mar 2004; <agriffis@gentoo.org> dbh-1.0.15.ebuild:
  stable on alpha

  08 Mar 2004; Bret Curtis <psi29a@gentoo.org> dbh-1.0.15.ebuild:
  Added ~mips to KEYWORDS

  17 Jan 2004; Bartosch Pixa <darkspecter@gentoo.org> :
  manifest fix

  16 Jan 2004; Bartosch Pixa <darkspecter@gentoo.org> dbh-1.0.15.ebuild:
  set ppc in keywords

  18 Dec 2003; Jason Wever <weeve@gentoo.org> dbh-1.0.15.ebuild:
  Marked stable on sparc.

*dbh-1.0.15 (22 Jul 2003)

  15 Nov 2003; Guy Martin <gmsoft@gentoo.org> dbh-1.0.15.ebuild :
  Added hppa to KEYWORDS.

  22 Jul 2003; Brad Cowan <bcowan@gentoo.org> dbh-1.0.15.ebuild:
  Version bump.

*dbh-1.0.14 (13 Jun 2003)

  13 Jun 2003; Brad Cowan <bcowan@gentoo.org> dbh-1.0.14.ebuild:
  Initial import.
