@@ -1,6 +1,11 @@
 # ChangeLog for dev-libs/dbh
 # Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/dbh/Attic/ChangeLog,v 1.17 2004/09/18 15:34:07 tgall Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/dbh/Attic/ChangeLog,v 1.18 2004/10/04 04:28:33 bcowan Exp $
+
+*dbh-1.0.20 (04 Oct 2004)
+
+  04 Oct 2004; Brad Cowan <bcowan@gentoo.org> +dbh-1.0.20.ebuild:
+  Version bump.
 
   18 Sep 2004; Tom Gall <tgall@gentoo.org> dbh-1.0.19.ebuild:
   stable on ppc64, bug #57744
